# opendart-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/opendart_mcp/: __main__.py  client.py  server.py
src/opendart_mcp/tools/: ds001_disclosure.py  ds002_periodic_report.py  ds003_financial.py  ds004_shareholding.py  ds005_major_report.py  ds006_securities_reg.py
