[project]
name = "opendart-mcp"
version = "0.1.0"
description = "OpenDART (DART 전자공시시스템) MCP Server - 금융감독원 공시정보 API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opendart_mcp"]
